--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.paypal.com/kvaratharajan/shippingNodeWeb.git"
+    "url": "https://github.paypal.com/kvaratharajan/WFM"
   },
   "dependencies": {
     "kraken-js": "~0.6.1",
